# mrs

./: CMakeLists.txt  Makefile  caprevoke.c  caprevoke.h  mrs-new.cc  mrs.c  mrs.cc  mrs.h  test.c
jemalloc/: README.md  mrs-changes.txt
jemalloc/include/jemalloc/: jemalloc.h  jemalloc_FreeBSD.h
jemalloc/include/jemalloc/internal/: jemalloc_internal_decls.h  jemalloc_preamble.h  size_classes.h
jemalloc/src/: jemalloc.c  malloc_io.c  mutex.c  pages.c
test/: test.c
